crates/wac-parser/tests/resolution/fail/inaccessible.wac
package test:comp;

import f: func();

let x = f.foo;
